# pyxcc

./: .gitignore  Cargo.toml  PROJECT_LOG.md  README.md  README_DEV.md  algoxcc.pyi  pyproject.toml
.github/workflows/: python-package.yml  wheel.yml
pytests/: test_algoxcc.py  test_matrix.json
src/: lib.rs  value_error.rs
