[package]
name = "algoxcc_python"
version = "0.1.1"
edition = "2024"

[lib]
name = "algoxccpy"
crate-type = ["cdylib"]
doc = false

[dependencies]
algoxcc = { path = "../algoxcc_rust" }

[dependencies.pyo3]
version = "0.24.1"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
