[package]
name = "pyxcc"
version = "0.1.1"
edition = "2024"
description = "Rust implementation of eXact Cover with Colors algorithm."
license = "Apache-2.0 OR MIT"

[lib]
name = "pyxcc"
crate-type = ["cdylib"]

[dependencies]
algoxcc = "0.1"

[dependencies.pyo3]
version = "0.24.1"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
